tests/lean/holeErrors.lean
--

def f1 := id

def f2 : _ := id

def f3 :=
let x := id;
x

def f4 (x) := x

def f5 (x : _) := x

def f6 :=
fun x => x

def f7 :=
let rec x := id;
10
